bug squashes
-App now quits AFTER completing project-info.txt file
-Got rid of blue border around text field when focused (get rid of it with everything else next)
-added ipcMain and ipcRenderer for communication between processes
-created enterSubtype('string') for making sure each option only gets added once
- added ', ' between project types in project-info.txt

--- a/release-builds/Thundervision-darwin-x64/Thundervision.app/Contents/Resources/app/styles.css
+++ b/release-builds/Thundervision-darwin-x64/Thundervision.app/Contents/Resources/app/styles.css
@@ -186,6 +186,7 @@ input[type=submit]:disabled {
 input[type=text]:focus {
 	box-shadow: inset 0px 0px 0px 2px white;
 	background-color: #lightGray;
+	outline:0;
 }
 
 #pdestination:focus, #temploc:focus{
